Editor css build update (#1500)
* editor css build update

--- a/editor/sass/editor/_editor-component-sprite-inspector.scss
+++ b/editor/sass/editor/_editor-component-sprite-inspector.scss
@@ -7,5 +7,5 @@
 }
 
 .sprite-component-inspector-clip + .sprite-component-inspector-clip {
-    margin-top: -$element-margin / 2;
+    margin-top: - calc($element-margin / 2);
 }
