--- a/editor/sass/code-editor-v2/_code-editor.scss
+++ b/editor/sass/code-editor-v2/_code-editor.scss
@@ -1,3 +1,4 @@
+@import '../ui';
 @import 'variables';
 @import '../fonts';
 
@@ -1308,7 +1309,7 @@ a.link-docs {
 
 }
 
-
-
 @import '../partials/ui-common';
 @import '../partials/version-control';
+@import '../theme-dark';
+
