--- a/editor/sass/editor/_editor-assets-panel.scss
+++ b/editor/sass/editor/_editor-assets-panel.scss
@@ -778,7 +778,7 @@
 }
 
 .pcui-asset-panel-users-indicator {
-    margin: $element-margin / 2;
+    margin: calc($element-margin / 2);
     width: 8px;
     height: 8px;
     flex-shrink: 0;
