--- a/editor/sass/editor/_editor-component-sound-inspector.scss
+++ b/editor/sass/editor/_editor-component-sound-inspector.scss
@@ -7,5 +7,5 @@
 }
 
 .sound-component-inspector-slot + .sound-component-inspector-slot {
-    margin-top: -$element-margin / 2;
+    margin-top: - calc($element-margin / 2);
 }
