--- a/editor/sass/pcui/_pcui-asset-thumbnail.scss
+++ b/editor/sass/pcui/_pcui-asset-thumbnail.scss
@@ -53,7 +53,7 @@
         width: 100%;
         height: 100%;
 
-        @include checkerboard(#465659, #5b696c, (66px / 5));
+        @include checkerboard(#465659, #5b696c, calc(66px / 5));
     }
 }
 
