--- a/editor/sass/pcui/_pcui-color-input.scss
+++ b/editor/sass/pcui/_pcui-color-input.scss
@@ -21,7 +21,7 @@
     }
 
     // checkerboard pattern
-    @include checkerboard(#fff, black, 44px/5);
+    @include checkerboard(#fff, black, calc(44px/5));
 
     &:after {
         content: '\00a0';
@@ -41,7 +41,7 @@
         display: none;
     }
 
-    @include checkerboard(#465659, #5b696c, 44px/5);
+    @include checkerboard(#465659, #5b696c, calc(44px/5));
 }
 
 // readonly color input
