Embedded icons font (#1516)
* update the way the icon font is included in the editor

--- a/editor/sass/_error.scss
+++ b/editor/sass/_error.scss
@@ -1,4 +1,4 @@
-@import 'variables';
+@import 'node_modules/@playcanvas/pcui/dist/variables.scss';
 
 body {
     font-family: 'courier new', monospace;
