--- a/editor/sass/pcui/_pcui.scss
+++ b/editor/sass/pcui/_pcui.scss
@@ -1,35 +1,8 @@
-.noSelect {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-// flex container
-.pcui-flex {
-    &:not(.pcui-hidden) {
-        display: -webkit-flex;
-        display: flex;
-    }
-    flex-direction: column;
-}
-
-// grid container
-.pcui-grid {
-    display: -ms-grid;
-    display: grid;
-}
-
-// scrollable element
-.pcui-scrollable {
-    // show scrollbars automatically
-    overflow: auto;
-}
-
 // external pcui styling
 @import 'node_modules/@playcanvas/pcui/dist/pcui.scss';
+
+// external pcui graph styling
+@import 'node_modules/@playcanvas/pcui-graph/dist/pcui-graph.scss';
 
 // editor specific pcui controls and extensions
 @import 'pcui-common';
