Project Management Dashboard Migration (#1537)
* Lists Projects

* Adds Screens and Navigation

* Refactors and Adds Exporting Functionality

* Adds Project Import

* Adds Stats, Watch, Star

* Adds Project Forking

* Adds Middle Mouse Button Support

* Adds Filters and Refactors

* Adds Create New Project

* Finalises Project Settings Panel

* Fixes Minor Bugs and Merges Build and Publish

* Adds Team Management Screen

* Fixes Minor Bugs

* Adds Error States

* Refactors API Calls

* Cleans Up Branch

* Fixes Errata

* Reverts Unnecessary Corazon Changes

* Updates Thumbnail Controls

* Fixes Thumbnail Bug

* Fixes Callback Error Message

* Adds No Thumbnail State

* Adds Working Projects Filters

* Adds Core Organization Workflow

* Adds Organization Filtering, Searching and Errors

* Adds Searching

* Adds Project Settings CMS Workflow

* Adds Delete Organization

* Adds Stats UI and New Project Modal

* Fixes New Project Screen Bugs

* Minor Changes

* Adds Project Deletion

* Fixes CMS Project View Bugs

* Adds Project Transferring on Org Deletion

* Fixes Deleting UI State Bug

* Fixes Known Bugs

* Adds Loading States

* Adds Empty Editor State

* Adds No Admin Flow

* Fixes Organization Delete Bug

* Refactors and Cleans Code

* Fixes Outstanding Bugs

* Adds Sorting Dropdown

* Miscellaneous Improvements and Fixes

* PCUI Refactoring - Main Pickers

* Applies Config Feedback

* Fixes Thumbnail Change Bug

* Fixes ESLint Errors

* Fixes More ESLint Issues

* Updates Pipeline Testing Thresholds

* Adds Error State to New Org Fail

* Post-Test Bug Fixes

* Other Minor Tweaks

* ESLint Fixes

* Fixes Dev Server Bugs

* Fixes More Bugs

* Updates Fonts and Fixes Minor Bugs

* ESLint

* Final Tweaks

* Removes Console Logs

* Refactors File Structure

--- a/editor/sass/partials/_ui-common.scss
+++ b/editor/sass/partials/_ui-common.scss
@@ -49,3 +49,70 @@
         }
     }
 }
+
+// common loader animation element (ported over from platform)
+@-webkit-keyframes fadeIn {
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+
+@-moz-keyframes fadeIn {
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+
+.loader {
+    // some styling
+    $fade-duration: 0.5s;
+
+    display: block;
+    background-size: 100%;
+    background-image:url("//playcanvas.com/static-assets/platform/images/loader.gif");
+    background-repeat:no-repeat;
+
+    opacity: 0;
+    -webkit-animation:fadeIn ease-in 1;
+    -moz-animation:fadeIn ease-in 1;
+    animation:fadeIn ease-in 1;
+
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+
+    -webkit-animation-duration: $fade-duration;
+    -moz-animation-duration: $fade-duration;
+    animation-duration: $fade-duration;
+
+    width: 32px;
+    height: 32px;
+
+    &.white { filter: brightness(5); }
+
+    &.small {
+        width: 24px;
+        height: 24px;
+    }
+
+    &.xsmall {
+        width: 18px;
+        height: 18px;
+    }
+}
+
