Dashboard Admin Tags Panel Fixes (#1603)
* Fixes Admin Flow

--- a/editor/sass/_editor.scss
+++ b/editor/sass/_editor.scss
@@ -7885,6 +7885,8 @@ strong {
                             left: 0;
                             width: 100%;
                             z-index: 101;
+                            max-height: 150px;
+                            overflow-y: auto;
     
                             li {
                                 background-color: #fff;
