--- a/editor/sass/_editor.scss
+++ b/editor/sass/_editor.scss
@@ -6363,15 +6363,26 @@ strong {
                     position: relative;
                     width: calc(100vw - 300px);
 
-                    & > .progress {
+                    & > .progress-container {
+                        position: relative;
                         width: 100%;
+                        height: 5px;
+                        transition: all 0.2s ease-in-out;
+
+                        &.progress-container-expand {
+                            margin-bottom: 20px;
+                        }
+
+                        & > .progress {
+                            width: 100%;
+                        }
                     }
     
                     & > .list-project-controls {
                         position: relative;
                         height: 30px;
                         display: flex;
-                        padding: 20px 36px 0 36px;
+                        padding: 15px 36px 0 36px;
     
                         & > .search-project {
                             flex: 18;
