added storage of Checkpoint List results (#1589)
* added storage of Checkpoint List results

* added check cache

* fixed logic with multiple users

* added loading spinner for version control

* added saving of scrollpoint

* fixed lint error

* added scrollpoint save after diff

* scrollpoint saved on diff view

* fixed load more and switching branches

* added hide spinner on hide panel

* added current branch definition

--- a/editor/sass/_editor.scss
+++ b/editor/sass/_editor.scss
@@ -10404,6 +10404,13 @@ strong {
                         margin-right: 5px;
                     }
                 }
+
+                .mini-spinner {
+                    position: relative;
+                    margin-left: auto;
+                    margin-right: 0;
+                    top: -32px;
+                }
             }
 
             .ui-list {
