--- a/editor/sass/_code_editor.scss
+++ b/editor/sass/_code_editor.scss
@@ -1,4 +1,5 @@
 @import 'node_modules/@playcanvas/pcui/dist/variables.scss';
+@import 'node_modules/@playcanvas/pcui/dist/theme-colors-green.scss';
 @import 'node_modules/@playcanvas/pcui/dist/fonts.scss';
 @import 'fonts';
 
