--- a/editor/sass/_error.scss
+++ b/editor/sass/_error.scss
@@ -1,4 +1,5 @@
 @import 'node_modules/@playcanvas/pcui/dist/variables.scss';
+@import 'node_modules/@playcanvas/pcui/dist/theme-colors-green.scss';
 
 body {
     font-family: 'courier new', monospace;
