--- a/editor-ui/sass/editor/_editor-statusbar.scss
+++ b/editor-ui/sass/editor/_editor-statusbar.scss
@@ -14,6 +14,7 @@
         }
     }
     > .jobsProgress {
+        width: 128px;
         margin-left: auto;
         opacity: 0;
         visibility: hidden;
