exit time changes (#1699)

--- a/editor-ui/sass/editor/_editor-asset-animstategraph-inspector.scss
+++ b/editor-ui/sass/editor/_editor-asset-animstategraph-inspector.scss
@@ -12,6 +12,13 @@
         margin: $element-margin;
         border: 1px solid $bcg-darkest;
         overflow: visible;
+
+        .asset-animstategraph-inspector-transition-conditions-note {
+            font-size: 12px;
+            white-space: break-spaces;
+            margin: 6px 0;
+            padding: 3px 10px;
+        }
     }
 
     > .pcui-button {
