add scope info to the settings panels (#1706)

--- a/editor-ui/sass/editor/_editor.scss
+++ b/editor-ui/sass/editor/_editor.scss
@@ -38,6 +38,7 @@
 @import "editor-asset-source-inspector";
 @import "editor-asset-font-inspector";
 @import "editor-asset-sprite-preview";
+@import "editor-settings-panel";
 @import "editor-settings-rendering-panel";
 @import "editor-settings-layers-panel";
 @import "editor-settings-batchgroups-panel";
