Migrate hierarchy panel progress bar to PCUI (#1707)
Co-authored-by: Will Eastcott <will@playcanvas.com>

--- a/editor-ui/sass/editor/_editor-hierarchy-panel.scss
+++ b/editor-ui/sass/editor/_editor-hierarchy-panel.scss
@@ -386,9 +386,8 @@
             display: inherit;
         }
 
-        > .ui-progress {
+        > .pcui-progress {
             flex-basis: 128px;
-            height: 4px;
         }
     }
 }
